--- a/TestJson.html
+++ b/TestJson.html
@@ -2,7 +2,7 @@
 <head><title> Test Json Ajax</title>
 </head>
 <body>
-        <H1>Hello Json Ajax</H1>
+        <H1>Hello  Ajax</H1>
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
